# tutorial-langchain

./: .gitignore  .python-version  AGENTS.md
Ch01-LangChainBasic/: 1.1. langchain-llm-openai.ipynb  1.2. langchain-llm-upstage.ipynb  1.3. langchain-llm-ollama.ipynb
Ch02-RAG/: 2.1. rag-with-chroma.ipynb  tax.docx
Ch03-LangGraph/: 3.1.basic.ipynb  3.1.langgraph-basic.ipynb  3.2.langgraph-pdf-rag.ipynb  3.3.langgraph-rewrite.ipynb  3.4.langgraph-self-rag.ipynb  3.5.corrective-rag.ipynb  3.6.adaptive_rag.ipynb  3.7.parallel-agent.ipynb  3.8.multi-agent.ipynb  (+2 more)
docs/: pyenv.md  (+3 more)
docs/03-fastapi-langchain-sample/: .dockerignore  .env.example  .python-version  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/: config.py  main.py
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/core/: config.py
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/routers/: chat.py  dependencies.py  health.py  web.py
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/schemas/: chat.py
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/services/: rag_service.py
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/static/: app.js  styles.css
docs/03-fastapi-langchain-sample/src/fastapi_langchain_sample/templates/: index.html
docs/03-fastapi-langchain-sample/tests/: conftest.py
docs/03-fastapi-langchain-sample/tests/routers/: test_app_lifespan.py  test_chat.py  test_health.py  test_web.py
docs/03-fastapi-langchain-sample/tests/services/: test_rag_service.py
(+26 files in other folders)
